Fix hover on navigation on dark mode

--- a/httf/css/theme.css
+++ b/httf/css/theme.css
@@ -12391,7 +12391,7 @@ footer hr {
   }
 }
 @media (prefers-color-scheme: dark) {
-  header nav > ul > li > a:hover, header nav > ul > li > a[aria-expanded=true], header nav > ul > li > a:focus {
+  header nav > ul > li a:hover, header nav > ul > li a[aria-expanded=true], header nav > ul > li a:focus {
     background: rgba(0, 0, 0, 0.5);
   }
 }
